--- a/API/package.json
+++ b/API/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0-rc.10",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.15",
     "playwright": "^1.17.1"
   }
